2001-12-14  DJ Delorie  <dj@redhat.com>
	    Danny Smith  <dannysmith@users.sourceforge.net>

	* config/i386/cygwin.h (I386_PE_STRIP_ENCODING): Handle '*'
	at SYM_NAME[0] or SYM_NAME[3].
	(STRIP_NAME_ENCODING): Don't check for leading '*'.

2001-12-14  Ira Ruben	<ira@apple.com>

	Add -### option (displays driver-generated commands without
	executing and quotes all arguments).
	* doc/invoke.texi: Add -###.
	* gcc.c (verbose_only_flag) - New flag.
	* (execute): If -### write quoted arguments and return.
	* (display_help): Print meaning of -###.
	* (process_command): Handle -###.

2001-12-14  Ira Ruben	<ira@apple.com>

	Fix to no allow -save-temps to clobber user's source file.
	* gcc.c: Add static globals input_stat and input_stat_set.
	(do_spec_1): For 'g', 'u', 'U' case with save_temps_flag
	set, check that user's input file is not overwritten.
	(set_input): Reset input_stat_set for each new file.

Fri Dec 14 22:14:44 CET 2001  Jan Hubicka  <jh@suse.cz>

	* predict.c (estimate_probability): Fix LOOP_EXIT heuristic.

2001-12-14  Zack Weinberg  <zack@codesourcery.com>

	* combine.c (record_dead_and_set_regs): Use
	regs_invalidated_by_call.  Don't note stores for CALL_INSNs.

2001-12-14  Roger Sayle <roger@eyesopen.com>

	* builtins.def: Rename BUILT_IN_FSQRT to BUILT_IN_SQRT and
	__builtin_fsqrt to __builtin_sqrt.

	* builtins.c (expand_builtin_mathfn,expand_builtin): Same.
	* doc/extend.texi: Simplify documentation to match patch.

Fri Dec 14 21:23:54 CET 2001  Jan Hubicka  <jh@suse.cz>

	* config.gcc: Revamp target_cpu_default2 to strings;
	support new x86 variants.
	* i386.c (override_options): Default x86_cpu_string and x86_arch_string
	properly; set prefetch_sse.
	* i386.h (x86_prefetch_sse): Declare.
	(TARGET_PREFETCH_SSE): New.
	(CPP_CPU_DEFAULT_SPEC): Define according to the new macros.
	(TARGET_CPU_DEFAULT_*): New.

Thu Dec 13 21:57:13 CET 2001  Janis Johnson <janis187@us.ibm.com>
			      Jan Hubicka  <jh@suse.cz>
