@@ -1,3 +1,8 @@
+Sat Dec 15 01:39:12 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (flow_find_cross_jump): Replace tests for note
+	by active_insn_p; count conditional jump as instruction.
+
 2001-12-14  DJ Delorie  <dj@redhat.com>
 	    Danny Smith  <dannysmith@users.sourceforge.net>
 
